<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.profile.AdminAuthViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/admin_auth_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_secondary_background_color">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/admin_auth_app_bar_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/admin_auth_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/component_color_shared_activity_toolbar_color"
        android:fontFamily="sans-serif"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/admin_auth_close"
        app:navigationIcon="@drawable/ic_close_white_24dp"
        app:title="@string/admin_auth_toolbar"
        app:titleTextAppearance="@style/ToolbarTextAppearance"
        app:titleTextColor="@color/component_color_shared_activity_toolbar_text_color" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
      android:id="@+id/scrollViewAdminPin"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:fillViewport="true"
      android:overScrollMode="never"
      android:scrollbars="none"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/admin_auth_app_bar_layout">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/admin_auth_activity_margin_start"
        android:layout_marginEnd="@dimen/admin_auth_activity_margin_end"
        android:paddingBottom="@dimen/admin_auth_activity_padding_bottom">

        <TextView
          android:id="@+id/admin_auth_heading_textview"
          style="@style/Heading2ViewStart"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/admin_auth_activity_admin_pin_main_text_view_margin_start"
          android:layout_marginTop="40dp"
          android:layout_marginEnd="@dimen/admin_auth_activity_admin_pin_main_text_view_margin_end"
          android:text="@string/admin_auth_heading"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/admin_auth_sub_text"
          style="@style/Subtitle1ViewStart"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:text="@string/admin_auth_sub"
          android:textColor="@color/component_color_shared_secondary_2_text_color"
          app:layout_constraintEnd_toEndOf="@id/admin_auth_heading_textview"
          app:layout_constraintStart_toStartOf="@id/admin_auth_heading_textview"
          app:layout_constraintTop_toBottomOf="@id/admin_auth_heading_textview" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/admin_auth_input_pin"
          style="@style/TextInputLayout"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="48dp"
          android:hint="@string/admin_auth_pin"
          app:errorMessage="@{viewModel.errorMessage}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/admin_auth_sub_text">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/admin_auth_input_pin_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="5"
            app:textChangedListener="@{viewModel.inputPinTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
          android:id="@+id/admin_auth_submit_button"
          style="@style/StateButtonActive"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="0dp"
          android:layout_marginTop="48dp"
          android:layout_marginEnd="0dp"
          android:background="@{viewModel.isSubmitButtonActive ? @drawable/state_button_primary_background :@drawable/start_button_transparent_background}"
          android:enabled="@{viewModel.isSubmitButtonActive}"
          android:minHeight="48dp"
          android:text="@string/admin_auth_submit"
          android:textColor="@{viewModel.isSubmitButtonActive() ? @color/component_color_shared_secondary_4_text_color : @color/component_color_shared_button_inactive_text_color }"
          app:layout_constraintEnd_toEndOf="@id/admin_auth_input_pin"
          app:layout_constraintTop_toBottomOf="@id/admin_auth_input_pin" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
      android:id="@+id/admin_auth_toolbar_shadow_view"
      android:layout_width="match_parent"
      android:layout_height="6dp"
      android:background="@drawable/toolbar_drop_shadow"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/admin_auth_app_bar_layout" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
