<?xml version="1.0" encoding="utf-8"?>
<layout>

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
      android:id="@+id/label_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:fontFamily="sans-serif"
      android:textColor="@color/oppiaPrimaryText"
      android:textSize="12sp" />

    <EditText
      android:id="@+id/input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:background="@drawable/add_profile_edit_text_background"
      android:fontFamily="sans-serif"
      android:minHeight="48dp"
      android:padding="8dp"
      android:saveEnabled="false"
      android:textColor="@color/oppiaPrimaryText"
      android:textSize="14sp" />

    <TextView
      android:id="@+id/error_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:layout_marginStart="8dp"
      android:textColor="@color/editTextError"
      android:textSize="12sp" />
  </LinearLayout>
</layout>
