...
  <!-- AdminAuthActivity -->
  <string name="admin_auth_toolbar">Administrator Controls</string>
  <string name="admin_auth_activity_add_profiles_title">Authorise to add profiles</string>
  <string name="admin_auth_activity_access_controls_title">Authorise to access Administrator Controls</string>
  <string name="admin_auth_heading">Administrator Authorization Required</string>
  <string name="admin_auth_sub">Enter the Administrator PIN in order to create a new account.</string>
  <string name="admin_auth_admin_controls_sub">Enter the Administrator PIN in order to access Administrator Controls.</string>
  <string name="admin_auth_pin">Administrator\'s PIN</string>
  <string name="admin_auth_incorrect">Incorrect Administrator PIN. Please try again.</string>
  <string name="admin_auth_null">Please enter Administrator PIN.</string>
  <string name="admin_auth_submit">Submit</string>
  <string name="admin_auth_close">Close</string>
  <!-- AdminPinActivity -->
  <string name="admin_pin_requirement_description">Before we add profiles, we need to protect your account by creating a PIN. This gives you the ability to authorize manage profiles on the device.</string>
  <string name="admin_pin_pin_description">Do &lt;b&gt;not&lt;/b&gt; use a PIN you have set for personal accounts like banking or social security.</string>
...
